<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="TODO">TODO</string>
    <string name="play_again">Play Again</string>
    <string name="tic_tac_toe">TIC TAC TOE</string>
    <string name="playHuman">MULTI PLAYER</string>
    <string name="playBot">SINGLE PLAYER</string>
    <string name="inf">INFO</string>
    <string name="back">BACK</string>
    <string name="initial_score">0</string>
    <string name="exit">Exit</string>
    <string name="oTurn">O\'s Turn</string>
    <string name="xTurn">X\'s Turn</string>
    <string name="stalemateMessage">StaleMate , it was a draw</string>
    <string name="play_as">Play as :</string>
    <string name="x_plays_first">X Plays First :</string>
    <string name="match_settings">Match Settings</string>
    <string name="play_now">Play Now</string>
    <string name="player_o">Player O</string>
    <string name="player_x">Player X</string>
</resources>
