<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="35sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toRightOf="@id/play_as"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/stylisho"
        android:contentDescription="@string/TODO"
        android:layout_marginStart="10dp" />
    <ImageView
        android:id="@+id/oImageView"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toRightOf="@id/switch1"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/stylishx"
        android:contentDescription="@string/TODO"
        android:layout_marginStart="10dp" />


    <TextView
        android:id="@+id/play_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/play_as"
        android:layout_marginTop="100dp"
        android:textColor="#000000"
        android:textSize="20sp"
        />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        android:layout_marginTop="100dp"
        android:checked="true"
        android:trackTint="@color/colorPrimary"
        android:thumbTint="@color/colorPrimaryDark"
        tools:layout_editor_absoluteY="273dp"
        android:layout_marginStart="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/switch1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_plays_first"
            android:textColor="#000000"
            android:textSize="20sp"
            />

        <CheckBox
            android:id="@+id/xPlaysFirst"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:buttonTint="@color/colorPrimaryDark"
            android:layout_marginStart="30dp" />
    </LinearLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:background="@color/colorPrimaryDark"
        android:padding="20dp"
        android:text="@string/play_now"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:onClick="playNow"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch1" />

</androidx.constraintlayout.widget.ConstraintLayout>