<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".PlayerActivity">

    <ImageView
        android:id="@+id/xImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/stylishx"
        android:contentDescription="@string/TODO"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp" />
    <TextView
        android:id="@+id/player1NameTextView"
        android:textSize="20sp"
        android:text="@string/player_x"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/xImageView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp" />

    <ImageView
        android:id="@+id/oImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/stylisho"
        android:contentDescription="@string/TODO"
        app:layout_constraintRight_toLeftOf="@id/oScoreTextView"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/player2NameTextView"
        android:textSize="20sp"
        android:text="@string/player_o"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/oImageView"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="369dp"
        android:layout_height="369dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        app:columnCount="3"
        android:background="@drawable/grid1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="3">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="113dp"
            android:layout_height="117dp"
            android:contentDescription="@string/TODO"
            android:onClick="humanTurn"
            android:tag="0"
            app:layout_column="0"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="110dp"
            android:layout_height="117dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/TODO"
            android:onClick="humanTurn"
            android:tag="1"
            app:layout_column="1"
            app:layout_row="0"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="120dp"
            android:layout_height="117dp"
            android:contentDescription="@string/TODO"
            android:onClick="humanTurn"
            android:tag="2"
            app:layout_column="2"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="113dp"
            android:layout_height="110dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/TODO"
            android:onClick="humanTurn"
            android:tag="3"
            app:layout_column="0"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="113dp"
            android:layout_height="110dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/TODO"
            android:onClick="humanTurn"
            android:tag="4"
            app:layout_column="1"
            app:layout_row="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/TODO"
            android:onClick="humanTurn"
            android:tag="5"
            app:layout_column="2"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="115dp"
            android:layout_height="117dp"
            android:layout_marginTop="13dp"
            android:contentDescription="@string/TODO"
            android:onClick="humanTurn"
            android:tag="6"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="110dp"
            android:layout_height="117dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/TODO"
            android:onClick="humanTurn"
            android:tag="7"
            app:layout_column="1"
            app:layout_row="2"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="120dp"
            android:layout_height="117dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/TODO"
            android:onClick="humanTurn"
            android:tag="8"
            app:layout_column="2"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/gameStatusTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="#ED2F21"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gridLayout" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="52dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="playAgain"
        android:text="@string/play_again"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="52dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="mainMenu"
        android:text="@string/exit"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/xScoreTextView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:text="@string/initial_score"
        android:textColor="@android:color/background_dark"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/xImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/oScoreTextView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:text="@string/initial_score"
        android:textColor="@android:color/background_dark"
        android:textSize="40sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>